--- a/whitesource.config
+++ b/whitesource.config
@@ -1,3 +1,7 @@
+r.resolveDependencies=true
+r.ignoreSourceFiles=true
+r.cranMirrorUrl=https://cran.rstudio.com
+
 checkPolicies=false
 forceCheckAllDependencies=false
 forceUpdate=false
